plugins {
    id 'maven-publish'
    id 'fabric-loom' version '1.15.3'
    id "com.modrinth.minotaur" version "2.9.0"
    id 'com.diffplug.spotless' version '8.8.0'
}

// Name jar with supported MC versions
String supportedVersions = project.minecraft_version
List<String> supportedVersionsArray = [project.minecraft_version]

version = "${project.mod_version}+mc${supportedVersions}"
group = project.maven_group
String artifactVersion = version.toString()

base {
    archivesName = project.archives_base_name
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
    inputs.property "version", artifactVersion

    filesMatching("fabric.mod.json") {
        expand "version": artifactVersion
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release.set(21)
    it.options.encoding = "UTF-8"
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

spotless {
    java {
        target 'src/**/*.java'
        eclipse('4.35').configFile('config/eclipse-formatter.xml')
        importOrder('java|javax', '', 'com.adibarra')
    }
}

jar {
    from "LICENSE"
    exclude "**/*.pdn"
}

sourceSets {
    gametest {
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
}

loom {
    runs {
        gametest {
            server()
            name "Game Tests"
            source sourceSets.gametest
            property "fabric-api.gametest"
            property "fabric-api.gametest.report-file", "${layout.buildDirectory.get().asFile}/junit.xml"
            runDir "run/gametest"
        }
    }
}

publishing {
    publications {
        //noinspection GroovyAssignabilityCheck
        mavenJava(MavenPublication) {
            //noinspection GroovyAssignabilityCheck, GrUnresolvedAccess
            from components.java
        }
    }
}

// Extract only the current version's section from CHANGELOG.md for Modrinth upload
def rawChangelog = new File("CHANGELOG.md").text
def versionHeader = "## ${project.mod_version}"
def changelogIdx = rawChangelog.indexOf(versionHeader)
def changelogEntry = changelogIdx < 0 ? "" : rawChangelog
    .substring(changelogIdx + versionHeader.length())
    .split("(?m)^## ")[0]
    .trim()

def releaseNotes = layout.buildDirectory.file("release-notes.md")
tasks.register("writeReleaseNotes") {
    outputs.file(releaseNotes)
    doLast {
        releaseNotes.get().asFile.text = changelogEntry
    }
}

modrinth {
    // Dry-run everywhere except explicit `-Prelease`
    debugMode = !project.hasProperty("release")
    token = System.getenv("MODRINTH_TOKEN") ?: ""
    projectId = "e4Vpm1dD"
    versionName = "Enchant Tweaker ${project.mod_version}+mc${supportedVersions}"
    versionNumber = "${project.mod_version}+mc${supportedVersions}"
    gameVersions = supportedVersionsArray
    changelog = changelogEntry
    versionType = "release"
    uploadFile = remapJar
    additionalFiles = [sourcesJar]
    loaders = ["fabric", "quilt"]
    dependencies {
        required.project "fabric-api"
    }
}
